更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -1,10 +1,11 @@
-### 核心架构配置 ###
+# 核心架构配置
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_GENERIC=y
 
-### LLVM/Clang工具链极致优化 (增强版) ###
+# LLVM/Clang工具链极致优化
 CONFIG_KERNEL_CLANG_LLVM=y
+CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_LLVM_TARGET_AARCH64=n
 CONFIG_LLVM_TARGET_ARM=n
 CONFIG_LLVM_TARGET_BPF=n
@@ -15,6 +16,7 @@ CONFIG_LLVM_TARGET_X86=y
 
 # 链接器优化
 CONFIG_USE_LLD=y
+CONFIG_LLVM_USE_LINKER=lld
 CONFIG_KERNEL_LD_ORPHAN_WARN=n
 
 # LTO 优化
@@ -46,30 +48,32 @@ CONFIG_ZLIB_OPTIMIZE_SPEED=y
 CONFIG_OPTIMIZE_INLINING=y
 CONFIG_KERNEL_BINUTILS_STRINGS=y
 
-# 减少调试信息体积
+# 调试信息配置
 CONFIG_DEBUG_INFO_NONE=n
 CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y
 CONFIG_DEBUG_INFO_COMPRESSED_ZLIB=y
 CONFIG_DEBUG_INFO_REDUCED=n
 
 # LLVM组件精简
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump;llvm-ar;llvm-nm" # 修改: 添加必要工具
+CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;llvm-objcopy;llvm-objdump"
 CONFIG_LLVM_POLLY_OPTIMIZER=n
 CONFIG_CLANG_PYTHON_BINDINGS=n
 CONFIG_CLANG_TIDY=n
 
-# 内核模块压缩优化
+# 内核模块压缩
 CONFIG_MODULE_COMPRESS_XZ=y
 CONFIG_MODULE_COMPRESS_GZIP=n
 CONFIG_MODULE_COMPRESS_NONE=n
 
-### J4125专属调度优化 ###
+# J4125调度优化
 CONFIG_SCHED_PDS=y
 CONFIG_TICK_CPU_ACCOUNTING=n
 CONFIG_SCHED_MC_PRIO=y
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_DYNAMIC=y
 CONFIG_HZ=1000
+CONFIG_NO_HZ=y
+CONFIG_NO_HZ_COMMON=y
 CONFIG_NO_HZ_FULL=y
 CONFIG_NO_HZ_FULL_ALL=y
 CONFIG_HIGH_RES_TIMERS=y
@@ -83,12 +87,17 @@ CONFIG_SCHED_CORE_LLC=y
 CONFIG_CPU_ISOLATION=y
 CONFIG_MIGRATION=y
 CONFIG_INTEL_IDLE=n
+CONFIG_HZ_PERIODIC=n
+CONFIG_HZ_1000=y
 
-### 内存优化 (8GB专用) ###
+# 内存优化 (8GB专用)
+CONFIG_TRANSPARENT_HUGEPAGE=y
+CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
+CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=n
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 CONFIG_LRU_GEN=y
 CONFIG_LRU_GEN_ENABLED=y
-CONFIG_LRU_GEN_WALKS_MMU=y                    # 新增: 提高页面回收效率
+CONFIG_LRU_GEN_WALKS_MMU=y
 CONFIG_COMPACTION=y
 CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
 CONFIG_DAMON=y
@@ -99,10 +108,12 @@ CONFIG_PAGE_POOL=y
 CONFIG_PAGE_POOL_STATS=y
 CONFIG_SLUB=y
 CONFIG_SLUB_CPU_PARTIAL=y
+CONFIG_SLUB_STATS=y
+CONFIG_SLUB_DEBUG=n
+CONFIG_SLUB_DEBUG_ON=n
 CONFIG_KFENCE=y
 
-### 网络协议栈+NAT加速（nftables极致优化版）###
-# 基础TCP优化
+# 网络协议栈+NAT加速
 CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_AO=y
 CONFIG_TCP_NO_TSQ=y
@@ -115,7 +126,31 @@ CONFIG_NF_CONNTRACK_EVENTS=y
 CONFIG_NF_NAT=y
 CONFIG_NF_NAT_NEEDED=y
 
-# 关键调度模块
+# Netfilter基础支持
+CONFIG_NETFILTER=y
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_NF_CONNTRACK_IPV4=y
+CONFIG_NF_CONNTRACK_IPV6=y
+CONFIG_NF_DEFRAG_IPV4=y
+CONFIG_NF_DEFRAG_IPV6=y
+CONFIG_NF_NAT_IPV4=y
+CONFIG_NF_NAT_IPV6=y
+CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_NF_NAT_MASQUERADE_IPV6=y
+CONFIG_NETFILTER_FLOW_OFFLOAD=y
+CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
+CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
+CONFIG_NETFILTER_XT_MATCH_STATE=y
+
+# nftables支持
+CONFIG_NF_TABLES=y
+CONFIG_NF_TABLES_INET=y
+CONFIG_NF_TABLES_IPV4=y
+CONFIG_NF_TABLES_IPV6=y
+CONFIG_NF_TABLES_NETDEV=y
+CONFIG_NF_TABLES_BRIDGE=y
+
+# 内核模块包配置
 CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-fq=y
 CONFIG_PACKAGE_kmod-sched-cake=y
@@ -123,8 +158,6 @@ CONFIG_PACKAGE_kmod-sched-connmark=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-bonding=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
-
-# nftables核心模块
 CONFIG_PACKAGE_kmod-nft-core=y
 CONFIG_PACKAGE_kmod-nft-netdev=y
 CONFIG_PACKAGE_kmod-nft-bridge=y
@@ -132,13 +165,9 @@ CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
 CONFIG_PACKAGE_kmod-nft-offload=y
-
-# Netfilter加速
 CONFIG_PACKAGE_kmod-nf-flow=y
 CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-reject=y
-
-# 加密加速
 CONFIG_PACKAGE_kmod-crypto-sha256=y
 
 # 内核级网络优化
@@ -149,7 +178,7 @@ CONFIG_NET_EGRESS=y
 CONFIG_NET_XGRESS=y
 CONFIG_IP_ROUTE_MULTIPATH=y
 CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_NET_RX_BUSY_POOL=y
+CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_NET_RX_BUSY_POLL_BUDGET=512
 CONFIG_IP_MULTIPLE_TABLES=y
 CONFIG_NET_DEVLINK=y
@@ -163,16 +192,16 @@ CONFIG_NET_SCH_TAPRIO=y
 CONFIG_NET_SCH_MULTIQ=y
 CONFIG_NET_SCH_PIE=y
 CONFIG_NET_SCH_FQ_PIE=y
-
-# Netfilter硬件加速
-CONFIG_NETFILTER_FLOW_OFFLOAD=y
-CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
-CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
-CONFIG_NETFILTER_XT_MATCH_STATE=y
 CONFIG_NET_CLS_ACT=y
 CONFIG_NET_ACT_POLICE=y
+CONFIG_NET_NS=y
+CONFIG_NET_NS_DELAYED=y
+CONFIG_NET_SKB_HEADROOM=128
+CONFIG_NET_SKB_ALLOC_SIZE=2048
+CONFIG_NET_SKB_DATA_ALIGNMENT=64
+CONFIG_NET_SKB_PAD=64
 
-### i226网卡极致优化 ###
+# i226网卡优化
 CONFIG_IGC=y
 CONFIG_IGC_DCA=y
 CONFIG_IGC_HWMON=y
@@ -182,18 +211,6 @@ CONFIG_IGC_LRO=y
 CONFIG_IGC_TAPRIO=y
 CONFIG_IGC_TSN=y
 CONFIG_IGC_LATENCY_TOLERANCE=y
-
-# 网卡队列优化
-CONFIG_XPS=y
-CONFIG_XPS_DEFAULT_QUEUES=4
-CONFIG_RPS=y
-CONFIG_RFS_ACCEL=y
-CONFIG_PCI_MSI=y
-CONFIG_IRQ_AFFINITY_HINT=y
-CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_IRQ_POLL=y
-
-# i226驱动参数优化
 CONFIG_IGC_QUEUES=4
 CONFIG_IGC_RX_POLLING=y
 CONFIG_IGC_RX_NAPI=y
@@ -205,40 +222,45 @@ CONFIG_IGC_RX_COPYBREAK=1024
 CONFIG_IGC_RX_NAPI_WEIGHT=256
 CONFIG_IGC_RSS=4
 
-### 中断优化 ###
+# 网卡队列与中断优化
+CONFIG_XPS=y
+CONFIG_XPS_DEFAULT_QUEUES=4
+CONFIG_RPS=y
+CONFIG_RFS_ACCEL=y
+CONFIG_PCI_MSI=y
+CONFIG_IRQ_AFFINITY_HINT=y
+CONFIG_PCI_MSI_IRQ_DOMAIN=y
+CONFIG_IRQ_POLL=y
 CONFIG_IRQ_FORCED_THREADING=y
 CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
 
-### 电源与CPU调控 ###
+# 电源与CPU调控
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_ACPI_CPPC_CPUFREQ=y
-CONFIG_INTEL_IDLE=n
 CONFIG_INTEL_TCC=y
 CONFIG_INTEL_EPB=y
 CONFIG_ACPI_CPPC_LIB=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 
-### 文件系统加速 ###
+# 文件系统
 CONFIG_SQUASHFS_XZ=y
 CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
 CONFIG_PACKAGE_kmod-fs-ntfs3=y
 CONFIG_BCACHEFS=y
 CONFIG_FS_VERITY=y
+CONFIG_PAGE_SIZE_4KB=y
 
-### 安全增强 ###
+# 安全增强
 CONFIG_STRICT_KERNEL_RWX=y
 CONFIG_HARDENED_USERCOPY=y
 CONFIG_INIT_STACK_ALL_ZERO=y
-CONFIG_PACKAGE_openssl-util=y
 CONFIG_STACKPROTECTOR_STRONG=y
 CONFIG_RANDOMIZE_KSTACK_OFFSET=y
 CONFIG_STATIC_USERMODEHELPER=y
@@ -247,19 +269,24 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_APPARMOR=y
 CONFIG_RETPOLINE=n
 
-### 必备工具 ###
+# 必备工具
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ethtool=y
 CONFIG_PACKAGE_nftables=y
+CONFIG_PACKAGE_nftables-json=y
+CONFIG_PACKAGE_libnftnl=y
+CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_openssl-util=y
 
-### LuCI应用 ###
+# LuCI应用
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
+CONFIG_PACKAGE_luci-app-irqbalance=y
 
-### IPv6支持 ###
+# IPv6支持
 CONFIG_PACKAGE_ipv6helper=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_IPV6_ROUTE_INFO=y
@@ -267,7 +294,7 @@ CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
 CONFIG_IPV6_SUBTREES=y
 
-### 固件设置 ###
+# 固件设置
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=944
 CONFIG_GRUB_IMAGES=y
@@ -275,68 +302,3 @@ CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_ROOTFS_TARGZ=y
-
-### 内存分配器优化 ###
-CONFIG_SLUB_DEBUG=n
-CONFIG_SLUB_DEBUG_ON=n
-CONFIG_SLUB_STATS=y
-
-### 网络栈内存优化 ###
-CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=64
-CONFIG_NET_NS=y
-CONFIG_NET_NS_DELAYED=y
-
-### 64字节小包优化 ###
-CONFIG_NET_SKB_HEADROOM=128
-CONFIG_NET_SKB_ALLOC_SIZE=2048
-CONFIG_NET_SKB_PAD=64                         # 新增: 优化小包性能
-
-### 定时器优化 ###
-CONFIG_NO_HZ=y
-CONFIG_NO_HZ_COMMON=y
-CONFIG_NO_HZ_FULL=y
-CONFIG_NO_HZ_FULL_ALL=y
-CONFIG_HZ_PERIODIC=n
-CONFIG_HZ_1000=y
-
-### 缓存优化 ###
-CONFIG_HAVE_ARCH_TRANSPARENT_HUGEPAGE=y
-CONFIG_TRANSPARENT_HUGEPAGE=y
-CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=n
-CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
-
-### 64字节小包转发专用优化 ###
-CONFIG_NET_SKB_DATA_ALIGNMENT=64
-CONFIG_PAGE_SIZE_4KB=y
-
-### Netfilter基础支持 ###
-CONFIG_NETFILTER=y
-CONFIG_NETFILTER_ADVANCED=y
-CONFIG_NF_CONNTRACK_IPV4=y
-CONFIG_NF_CONNTRACK_IPV6=y
-CONFIG_NF_DEFRAG_IPV4=y
-CONFIG_NF_DEFRAG_IPV6=y
-CONFIG_NF_NAT_IPV4=y
-CONFIG_NF_NAT_IPV6=y
-CONFIG_NF_NAT_MASQUERADE_IPV4=y
-CONFIG_NF_NAT_MASQUERADE_IPV6=y
-
-### nftables基础支持 ###
-CONFIG_NF_TABLES=y
-CONFIG_NF_TABLES_INET=y
-CONFIG_NF_TABLES_IPV4=y
-CONFIG_NF_TABLES_IPV6=y
-CONFIG_NF_TABLES_NETDEV=y
-CONFIG_NF_TABLES_BRIDGE=y
-
-### 新增nftables相关工具 ###
-CONFIG_PACKAGE_nftables-json=y
-CONFIG_PACKAGE_libnftnl=y
-
-### 新增优化项 ###
-CONFIG_ARCH_WANT_GENERAL_HUGETLB=y            # 新增: 大页支持
-CONFIG_ARCH_WANT_OPTIMIZE_DAX_VMEMMAP=y       # 新增: 内存映射优化
-CONFIG_ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMAP=y   # 新增: 大页内存映射优化
-CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y        # 新增: 跳转标签优化
-CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y        # 新增: 栈帧优化
