--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -1,264 +1,34 @@
-### 核心架构配置 ###
 CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
-CONFIG_TARGET_x86_64_DEVICE_generic=y
+CONFIG_TARGET_x86_64_DEVICE_GENERIC=y
 
-### LLVM/Clang工具链极致优化 ###
-CONFIG_KERNEL_CLANG_LLVM=y
+# 工具链优化（OpenWrt 支持的选项）
 CONFIG_USE_LLD=y
-CONFIG_LTO_CLANG_THIN=y
-CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE=y
-CONFIG_LLVM_BOLT=y
-CONFIG_LLVM_POLLY=y
-CONFIG_LLVM_CFI=y
-CONFIG_LLVM_CFI_CLANG=y
-CONFIG_LLVM_CFI_PERF=y
-CONFIG_LLVM_LTO_NONE=n
-CONFIG_LLVM_LTO_CLANG_THIN=y
-CONFIG_LLVM_DISTRIBUTION_COMPONENTS="clang;lld;bolt;polly"
-CONFIG_LLVM_USE_LINKER=lld
-CONFIG_LLVM_PGO_GENERATE=y
-CONFIG_LLVM_PGO_USE=y
-CONFIG_ZLIB_OPTIMIZE_SPEED=y
-CONFIG_KERNEL_LTO=y        
+CONFIG_USE_LTO=y
+CONFIG_USE_MUSL=y
 
-### J4125专属调度优化 ###
-CONFIG_SCHED_PDS=y
-CONFIG_TICK_CPU_ACCOUNTING=n
-CONFIG_SCHED_MC_PRIO=y
-CONFIG_PREEMPT=y
-CONFIG_HZ=1000
-CONFIG_NO_HZ_FULL=y
-CONFIG_NO_HZ_FULL_ALL=y
-CONFIG_HIGH_RES_TIMERS=y
-CONFIG_SCHED_CORE=y
-CONFIG_SCHED_MC=y
-CONFIG_PREEMPT_DYNAMIC=y
-CONFIG_SCHED_HRTICK=y
-CONFIG_RCU_BOOST=y
-CONFIG_RCU_NOCB_CPU=y
-CONFIG_SOFTIRQ_ON_OWN_STACK=y
-CONFIG_SCHED_CORE_LLC=y
-CONFIG_CPU_ISOLATION=y
-CONFIG_MIGRATION=y
-
-### 内存优化 (8GB专用) ###
-CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
-CONFIG_LRU_GEN=y
-CONFIG_LRU_GEN_ENABLED=y
-CONFIG_LRU_GEN_WALKS_MMU=y
-CONFIG_COMPACTION=y
-CONFIG_INIT_ON_ALLOC_DEFAULT_ON=y
-CONFIG_DAMON=y
-CONFIG_DAMON_VADDR=y
-CONFIG_DAMON_PADDR=y
-CONFIG_DAMON_RECLAIM=y
-CONFIG_PAGE_POOL=y
-CONFIG_PAGE_POOL_STATS=y
-CONFIG_SLUB=y
-CONFIG_SLUB_CPU_PARTIAL=y
-CONFIG_KFENCE=y
-
-
-### 网络协议栈+NAT加速（已融合建议） ###
-CONFIG_TCP_MD5SIG=y
-CONFIG_TCP_AO=y
-CONFIG_TCP_NO_TSQ=y
-CONFIG_NET_FLOW_LIMIT=y
-CONFIG_PACKAGE_kmod-tcp-bbr=y
-CONFIG_PACKAGE_kmod-sched-core=y
-CONFIG_PACKAGE_kmod-sched-fq=y
-CONFIG_PACKAGE_kmod-sched-bpf=y
-CONFIG_PACKAGE_kmod-sched-connmark=y
-CONFIG_PACKAGE_kmod-nft-netdev=y
-CONFIG_PACKAGE_kmod-nft-bridge=y
-CONFIG_PACKAGE_kmod-sched-cake=y
-CONFIG_PACKAGE_kmod-ifb=y
-CONFIG_PACKAGE_kmod-nft-compat=y
-CONFIG_PACKAGE_kmod-ipt-ipopt=y
-CONFIG_PACKAGE_kmod-ipt-conntrack-extra=y
-CONFIG_PACKAGE_kmod-ipt-nat-extra=y
-CONFIG_PACKAGE_kmod-crypto-sha256=y
-CONFIG_PACKAGE_kmod-nft-socket=y
-CONFIG_PACKAGE_kmod-sched=y
-CONFIG_PACKAGE_kmod-bonding=y
-CONFIG_PACKAGE_kmod-nf-flow=y
-CONFIG_PACKAGE_kmod-ipt-offload=y
-CONFIG_PACKAGE_kmod-nft-nat=y
-CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
-CONFIG_PACKAGE_kmod-nf-reject=y
-CONFIG_TCP_CONG_BBR=y
-CONFIG_TCP_CONG_ADVANCED=y
-CONFIG_TCP_ZERO_COPY_RECEIVE=y
-CONFIG_NET_EGRESS=y
-CONFIG_NET_XGRESS=y
-CONFIG_IP_ROUTE_MULTIPATH=y
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_NET_RX_BUSY_POLL=y
-CONFIG_NET_RX_BUSY_POLL_BUDGET=256
-CONFIG_IP_MULTIPLE_TABLES=y
-CONFIG_NET_DEVLINK=y
-CONFIG_NET_SCH_DEFAULT=y
-CONFIG_DEFAULT_FQ_CODEL=y
-CONFIG_NET_CLS_FLOW=y
-CONFIG_NET_SCH_MQPRIO=y
-CONFIG_NET_EMATCH=y
-CONFIG_NET_ACT_MIRRED=y
-CONFIG_NET_IP_TUNNEL=y
-CONFIG_NET_SCH_TAPRIO=y
-CONFIG_NET_SCH_MULTIQ=y
-CONFIG_NET_SCH_PIE=y
-CONFIG_NET_SCH_FQ_PIE=y
-CONFIG_NETFILTER_FLOW_OFFLOAD=y
-CONFIG_NETFILTER_XT_TARGET_FLOWOFFLOAD=y
-CONFIG_NETFILTER_XT_MATCH_BPF=y     
-CONFIG_NETFILTER_XT_MATCH_CONNTRACK=y
-CONFIG_NETFILTER_XT_MATCH_STATE=y         
-
-### i226网卡极致优化 ###
-CONFIG_IGC=y
-CONFIG_IGC_DCA=y
-CONFIG_IGC_HWMON=y
-CONFIG_IGC_DIM=y
-CONFIG_IGC_VLAN_STRIPPING=y
-CONFIG_IGC_LRO=y
-CONFIG_IGC_XDP=y
-CONFIG_IGC_TAPRIO=y
-CONFIG_IGC_TSN=y
-CONFIG_IGC_LATENCY_TOLERANCE=y
-CONFIG_XPS=y
-CONFIG_XPS_DEFAULT_QUEUES=4     # 建议提升为8
-CONFIG_RPS=y
-CONFIG_RFS_ACCEL=y
-CONFIG_PCI_MSI=y
-CONFIG_IRQ_AFFINITY_HINT=y
-CONFIG_PCI_MSI_IRQ_DOMAIN=y
-CONFIG_IRQ_POLL=y
-CONFIG_IGC_QUEUES=4
-CONFIG_IGC_RX_POLLING=y
-CONFIG_IGC_RX_NAPI=y
-CONFIG_IGC_TX_NAPI=y
-CONFIG_IGC_TSO=y
-CONFIG_IGC_GSO=y
-CONFIG_IGC_GRO=y
-CONFIG_IGC_RX_COPYBREAK=256
-CONFIG_IGC_RX_NAPI_WEIGHT=256
-
-
-### XDP核心配置 ###
-CONFIG_XDP_SOCKETS=y
-CONFIG_KERNEL_XDP_SOCKETS=y
-CONFIG_XDP_UMEM=y
-CONFIG_XSK_DIAG=y
-CONFIG_BPF=y
-CONFIG_BPF_SYSCALL=y
-CONFIG_BPF_JIT=y
-CONFIG_BPF_JIT_ALWAYS_ON=y
-CONFIG_BPF_JIT_HARDEN=y
-CONFIG_DEBUG_INFO_BTF=y
-CONFIG_DEBUG_KERNEL=n
-CONFIG_DEBUG_INFO=n
-CONFIG_DEBUG_INFO_REDUCED=n
-CONFIG_DEBUG_INFO_BTF=y
-CONFIG_BPF_LSM=y
-CONFIG_KERNEL_BPF_EVENTS=y
-CONFIG_KERNEL_BPF_STREAM_PARSER=y
-CONFIG_KERNEL_CGROUPS=y
-CONFIG_KERNEL_KALLSYMS=y
-CONFIG_KERNEL_KPROBES=y
-CONFIG_KERNEL_KPROBE_EVENTS=y
-CONFIG_NET_INGRESS=y
-CONFIG_NET_CLS_ACT=y
-CONFIG_NET_CLS_BPF=y
-CONFIG_NET_ACT_BPF=y
-CONFIG_NET_SCH_INGRESS=y
-CONFIG_KERNEL_MODULE_ALLOW_BTF_MISMATCH=y
-CONFIG_KERNEL_NETKIT=y
-CONFIG_PACKAGE_iproute2-tc=y
-CONFIG_PACKAGE_ethtool-full=y
-CONFIG_PACKAGE_bpftool-full=y
-CONFIG_PACKAGE_libbpf-extra=y
-CONFIG_PACKAGE_libbpf=y
-CONFIG_PACKAGE_libxdp=y
-CONFIG_PACKAGE_libtirpc=y
-CONFIG_PACKAGE_clang=y
-CONFIG_PACKAGE_llvm=y
-CONFIG_KERNEL_LWTUNNEL_BPF=y
-CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
-CONFIG_XDP_DEFAULT_HASH=y
-CONFIG_XDP_SOCKETS_UMEM_ALIGNMENT=2048
-CONFIG_BPF_PRELOAD=y
-
-### 中断优化 ###
-CONFIG_IRQ_FORCED_THREADING=y
-CONFIG_GENERIC_IRQ_IPI=y
-CONFIG_PACKAGE_irqbalance=y
-CONFIG_PACKAGE_luci-app-irqbalance=y
-CONFIG_IRQ_TIME_ACCOUNTING=y
-CONFIG_HARDIRQS_SW_RESEND=y
-CONFIG_IRQ_DOMAIN_HIERARCHY=y
-
-### 电源与CPU调控 ###
-CONFIG_INTEL_PSTATE=y
-CONFIG_INTEL_PSTATE_HWP=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
-CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
-CONFIG_ACPI_CPPC_CPUFREQ=y
-CONFIG_INTEL_IDLE=n
-CONFIG_INTEL_TCC=y
-CONFIG_INTEL_EPB=y
-CONFIG_ACPI_CPPC_LIB=y
-CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_CPU_FREQ_GOV_ONDEMAND=y  
-
-
-### 文件系统加速 ###
-CONFIG_SQUASHFS_XZ=y
-CONFIG_SQUASHFS_DECOMP_MULTI_PERCPU=y
-CONFIG_PACKAGE_kmod-fs-ntfs3=y
-CONFIG_BCACHEFS=y
-CONFIG_FS_VERITY=y
-
-### 安全增强 ###
-CONFIG_STRICT_KERNEL_RWX=y
-CONFIG_HARDENED_USERCOPY=y
-CONFIG_INIT_STACK_ALL_ZERO=y
-CONFIG_PACKAGE_openssl-util=y
-CONFIG_STACKPROTECTOR_STRONG=y
-CONFIG_RANDOMIZE_KSTACK_OFFSET=y
-CONFIG_STATIC_USERMODEHELPER=y
-CONFIG_ZERO_CALL_USED_REGS=y
-CONFIG_SECURITY_SELINUX=y    
-CONFIG_SECURITY_APPARMOR=y   
-CONFIG_RETPOLINE=n
-
-### 必备工具 ###
+# 包选择
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iperf3=y
 CONFIG_PACKAGE_ethtool=y
-CONFIG_PACKAGE_xdp-tools=y
-CONFIG_PACKAGE_bpftool=y
-
-### LuCI应用 ###
+CONFIG_PACKAGE_nftables=y
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-diskman=y
 CONFIG_PACKAGE_luci-app-oaf=y
 CONFIG_PACKAGE_luci-app-filemanager=y
 
-### IPv6支持 ###
-CONFIG_PACKAGE_ipv6helper=y
-CONFIG_PACKAGE_ip6tables=y
-CONFIG_IPV6_ROUTER_PREF=y
-CONFIG_IPV6_ROUTE_INFO=y
-CONFIG_IPV6_MULTIPLE_TABLES=y
-CONFIG_IPV6_OPTIMISTIC_DAD=y
-CONFIG_IPV6_SUBTREES=y
+# 内核模块（通过 OpenWrt 的配置方式）
+CONFIG_PACKAGE_kmod-sched-core=y
+CONFIG_PACKAGE_kmod-sched-cake=y
+CONFIG_PACKAGE_kmod-tcp-bbr=y
+CONFIG_PACKAGE_kmod-nft-core=y
+CONFIG_PACKAGE_kmod-nft-fullcone=y
+CONFIG_PACKAGE_kmod-igc=y
 
-### 固件设置 ###
+# 固件设置
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=944
 CONFIG_GRUB_IMAGES=y
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
 CONFIG_TARGET_ROOTFS_SQUASHFS=y
-CONFIG_TARGET_ROOTFS_TARGZ=y
