--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -389,4 +389,4 @@ CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=944
 CONFIG_GRUB_EFI_IMAGES=y
 CONFIG_TARGET_IMAGES_GZIP=y
-CONFIG_TARGET_ROOTFS_SQUASHFS=y
+#CONFIG_TARGET_ROOTFS_SQUASHFS=y
