更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -6,6 +6,20 @@ CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_GENERIC=y
 
 # ======================
+# 固件格式配置 - 关键修改部分
+# ======================
+CONFIG_TARGET_KERNEL_PARTSIZE=32
+CONFIG_TARGET_ROOTFS_PARTSIZE=944
+CONFIG_GRUB_EFI_IMAGES=y         
+CONFIG_TARGET_IMAGES_GZIP=y      
+CONFIG_TARGET_ROOTFS_SQUASHFS=y   
+CONFIG_TARGET_ROOTFS_EXT4FS=n
+CONFIG_TARGET_ROOTFS_ISO=n
+CONFIG_TARGET_ROOTFS_CPIOGZ=n
+CONFIG_TARGET_ROOTFS_TARGZ=n
+CONFIG_TARGET_ROOTFS_UBIFS=n
+
+# ======================
 # LLVM/Clang 工具链极致优化
 # ======================
 CONFIG_KERNEL_CLANG_LLVM=y
@@ -381,12 +395,3 @@ CONFIG_IPV6_ROUTE_INFO=y
 CONFIG_IPV6_MULTIPLE_TABLES=y
 CONFIG_IPV6_OPTIMISTIC_DAD=y
 CONFIG_IPV6_SUBTREES=y
-
-# ======================
-# 固件设置
-# ======================
-CONFIG_TARGET_KERNEL_PARTSIZE=32
-CONFIG_TARGET_ROOTFS_PARTSIZE=944
-CONFIG_GRUB_EFI_IMAGES=y
-CONFIG_TARGET_IMAGES_GZIP=y
-#CONFIG_TARGET_ROOTFS_SQUASHFS=y
