更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -201,6 +201,7 @@ CONFIG_PACKAGE_kmod-nf-reject=y
 # 加密加速
 # ======================
 CONFIG_PACKAGE_kmod-crypto-sha256=y
+CONFIG_CRYPTO_AES_NI_INTEL=y
 
 # ======================
 # 内核级网络优化
@@ -210,7 +211,7 @@ CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_ZERO_COPY_RECEIVE=y
 CONFIG_NET_EGRESS=y
 CONFIG_NET_XGRESS=y
-CONNET_IP_ROUTE_MULTIPATH=y
+CONFIG_CONNECT_IP_ROUTE_MULTIPATH=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_RX_BUSY_POOL=y
 CONFIG_NET_RX_BUSY_POLL=y
@@ -222,7 +223,7 @@ CONFIG_DEFAULT_FQ_CODEL=y
 CONFIG_NET_SCH_MQPRIO=y
 CONFIG_NET_EMATCH=y
 CONFIG_NET_ACT_MIRRED=y
-CONNET_IP_TUNNEL=y
+CONFIG_IP_TUNNEL=y
 CONFIG_NET_SCH_TAPRIO=y
 CONFIG_NET_SCH_MULTIQ=y
 CONFIG_NET_SCH_PIE=y
@@ -346,7 +347,6 @@ CONFIG_RANDOMIZE_KSTACK_OFFSET=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_ZERO_CALL_USED_REGS=y
 CONFIG_SECURITY_SELINUX=y
-CONFIG_SECURITY_APPARMOR=y
 CONFIG_RETPOLINE=n
 CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
 CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
