更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -10,9 +10,9 @@ CONFIG_TARGET_x86_64_DEVICE_GENERIC=y
 # ======================
 CONFIG_TARGET_KERNEL_PARTSIZE=32
 CONFIG_TARGET_ROOTFS_PARTSIZE=944
-CONFIG_GRUB_EFI_IMAGES=y         
-CONFIG_TARGET_IMAGES_GZIP=y      
-CONFIG_TARGET_ROOTFS_SQUASHFS=y   
+CONFIG_GRUB_EFI_IMAGES=y
+CONFIG_TARGET_IMAGES_GZIP=y
+CONFIG_TARGET_ROOTFS_SQUASHFS=y
 CONFIG_TARGET_ROOTFS_EXT4FS=n
 CONFIG_TARGET_ROOTFS_ISO=n
 CONFIG_TARGET_ROOTFS_CPIOGZ=n
@@ -26,7 +26,7 @@ CONFIG_KERNEL_CLANG_LLVM=y
 CONFIG_LLVM_TARGET_ARCH="x86-64-v2"
 CONFIG_LLVM_TARGET_AARCH64=n
 CONFIG_LLVM_TARGET_ARM=n
-CONFIG_LLVM_TARGET_BPF=n
+CONFIG_LLVM_TARGET_BPF=n  # 保持为 'n'，BPF 代码通常由 clang 定位到 bpf 架构，但此处是配置宿主机的 LLVM 目标支持
 CONFIG_LLVM_TARGET_MIPS=n
 CONFIG_LLVM_TARGET_POWERPC=n
 CONFIG_LLVM_TARGET_RISCV=n
@@ -67,6 +67,7 @@ CONFIG_GCC_OPTIMIZE_CPU_NATIVE=y
 # 控制流完整性增强
 # ======================
 CONFIG_CFI_CLANG=y
+# 注意：CFI 可能与某些 eBPF 内部操作交互，若运行时遇到问题可考虑调整为 CONFIG_CFI_PERMISSIVE=y
 CONFIG_CFI_CLANG_SHADOW=y
 CONFIG_CFI_PERMISSIVE=n
 
@@ -78,12 +79,15 @@ CONFIG_KERNEL_BINUTILS_STRINGS=y
 CONFIG_ZLIB_OPTIMIZE_SPEED=y
 
 # ======================
-# 调试信息配置
+# 调试信息配置 (对 eBPF 开发及调试重要)
 # ======================
 CONFIG_DEBUG_INFO_NONE=n
-CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y
-CONFIG_DEBUG_INFO_COMPRESSED_ZLIB=y
+CONFIG_DEBUG_INFO_DWARF_TOOLCHAIN_DEFAULT=y  # 生成 DWARF 调试信息，bpftool 等工具可能需要
+CONFIG_DEBUG_INFO_COMPRESSED_ZLIB=y          # 压缩调试信息以节省空间
 CONFIG_DEBUG_INFO_REDUCED=n
+CONFIG_DEBUG_INFO_BTF=y                      # [新增] 启用 BTF (BPF Type Format)，对现代 eBPF 工具链很重要
+CONFIG_PAHOLE_HAS_SPLIT_BTF=y                # [新增] 假设 pahole 工具支持生成 split BTF
+CONFIG_DEBUG_INFO_BTF_MODULES=y              # [新增] 为内核模块也生成 BTF 信息
 
 # ======================
 # LLVM 组件配置
@@ -99,6 +103,50 @@ CONFIG_CLANG_TIDY=n
 CONFIG_MODULE_COMPRESS_XZ=y
 CONFIG_MODULE_COMPRESS_GZIP=n
 CONFIG_MODULE_COMPRESS_NONE=n
+
+# ======================
+# eBPF 核心子系统支持 [新增]
+# ======================
+CONFIG_BPF=y                                 # [新增] 启用 eBPF 系统
+CONFIG_BPF_SYSCALL=y                         # [新增] 启用 bpf() 系统调用
+CONFIG_BPF_JIT=y                             # [新增] 启用 BPF JIT 编译器（性能关键）
+CONFIG_BPF_JIT_ALWAYS_ON=y                   # [新增] 始终开启 JIT， mitigates 某些 Spectre 变种并提升性能
+CONFIG_HAVE_EBPF_JIT=y                       # [新增] 架构支持 eBPF JIT (x86_64 应支持)
+CONFIG_ARCH_WANT_DEFAULT_BPF_JIT=y           # [新增] 架构默认启用 BPF JIT
+CONFIG_BPF_EVENTS=y                          # [新增] 允许 eBPF 程序附加到跟踪点、kprobe 等事件
+CONFIG_BPF_STREAM_PARSER=y                   # [新增] BPF 流解析器，用于套接字相关操作
+
+# ======================
+# XDP 支持 [新增]
+# ======================
+CONFIG_XDP_SOCKETS=y                         # [新增] 启用 AF_XDP 套接字，用于高性能用户态包处理
+CONFIG_XDP_SOCKETS_DIAG=y                    # [新增] AF_XDP 套接字诊断支持
+CONFIG_XDP_OPTIONS=y                         # [新增] XDP 选项支持
+
+# ======================
+# 网络相关 eBPF/XDP 功能 [新增]
+# ======================
+CONFIG_NET_CLS_BPF=y                         # [新增] 允许 BPF 程序作为流量分类器
+CONFIG_NET_ACT_BPF=y                         # [新增] 允许 BPF 程序作为流量动作
+CONFIG_BPF_FLOW_DISSECTOR=y                  # [新增] BPF 流解析器
+CONFIG_NET_SCH_INGRESS=y                     # [新增] 入口流量控制，可供 eBPF 使用
+CONFIG_NET_EGRESS=y                          # [已存在] 出口流量控制，可供 eBPF 使用
+CONFIG_NET_XGRESS=y                          # [已存在] 通用 XGRESS 支持
+
+# ======================
+# eBPF 映射和程序类型 [新增]
+# ======================
+CONFIG_BPF_LSM=y                             # [新增] 允许 eBPF 程序附加到 LSM (Linux 安全模块) 钩子
+CONFIG_BPF_PRELOAD=y                         # [新增] 预加载 BPF 程序（例如用于调试）
+CONFIG_BPF_PRELOAD_UMD=y                     # [新增] 预加载 BPF 用户模式驱动程序
+CONFIG_BPF_UNPRIV_DEFAULT_OFF=y              # [新增] 默认禁止非特权 BPF，更安全
+
+# ======================
+# 必备用户态工具 (通过 OpenWrt 包选择安装，此处确保内核支持) [新增]
+# ======================
+CONFIG_BPFILTER=y                            # [新增] BPF 基础的包过滤（可选，可与 nftables 共存）
+CONFIG_BPFILTER_UMH=y                        # [新增] BPF 过滤器的用户模式助手
+CONFIG_TEST_BPF=y                            # [新增] 编译 BPF 自测试（可选，用于验证）
 
 # ======================
 # J4125 专属调度优化
@@ -172,6 +220,7 @@ CONFIG_PACKAGE_kmod-sched-core=y
 CONFIG_PACKAGE_kmod-sched-fq=y
 CONFIG_PACKAGE_kmod-sched-cake=y
 CONFIG_PACKAGE_kmod-sched-connmark=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
 CONFIG_PACKAGE_kmod-ifb=y
 CONFIG_PACKAGE_kmod-bonding=y
 CONFIG_PACKAGE_kmod-tcp-bbr=y
@@ -180,12 +229,12 @@ CONFIG_PACKAGE_kmod-tcp-bbr=y
 # nftables 核心模块
 # ======================
 CONFIG_PACKAGE_kmod-nft-core=y
-CONFIG_PACKAGE_kmod-nft-netdev=y
+CONFIG_PACKAGE_kmod-nft-netdev=y             # [重要] 支持 nftables 在 netdev 族（含 XDP 钩子）
 CONFIG_PACKAGE_kmod-nft-bridge=y
 CONFIG_PACKAGE_kmod-nft-nat=y
 CONFIG_PACKAGE_kmod-nft-socket=y
 CONFIG_PACKAGE_kmod-nft-fullcone=y
-CONFIG_PACKAGE_kmod-nft-offload=y
+CONFIG_PACKAGE_kmod-nft-offload=y            # [重要] 支持将 nftables 规则卸载到硬件（如果网卡支持）
 CONFIG_PACKAGE_nftables=y
 CONFIG_PACKAGE_nftables-json=y
 CONFIG_PACKAGE_libnftnl=y
@@ -202,6 +251,7 @@ CONFIG_PACKAGE_kmod-nf-reject=y
 # ======================
 CONFIG_PACKAGE_kmod-crypto-sha256=y
 CONFIG_CRYPTO_AES_NI_INTEL=y
+CONFIG_CRYPTO_LIB_BLAKE2S=y                  # [新增] 某些 BPF 相关组件可能使用
 
 # ======================
 # 内核级网络优化
@@ -209,8 +259,8 @@ CONFIG_CRYPTO_AES_NI_INTEL=y
 CONFIG_TCP_CONG_BBR=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_ZERO_COPY_RECEIVE=y
-CONFIG_NET_EGRESS=y
-CONFIG_NET_XGRESS=y
+CONFIG_NET_EGRESS=y                          # [已存在]
+CONFIG_NET_XGRESS=y                          # [已存在]
 CONFIG_CONNECT_IP_ROUTE_MULTIPATH=y
 CONFIG_IPV6_ROUTER_PREF=y
 CONFIG_NET_RX_BUSY_POOL=y
@@ -262,31 +312,32 @@ CONFIG_NF_TABLES=y
 CONFIG_NF_TABLES_INET=y
 CONFIG_NF_TABLES_IPV4=y
 CONFIG_NF_TABLES_IPV6=y
-CONFIG_NF_TABLES_NETDEV=y
+CONFIG_NF_TABLES_NETDEV=y                    # [重要] 允许 nftables 在网络设备层操作（与 XDP 相关）
 CONFIG_NF_TABLES_BRIDGE=y
 
 # ======================
-# i226 网卡极致优化
+# i226 网卡极致优化 (确认 IGC 驱动支持 XDP)
 # ======================
 CONFIG_IGC_DCA=y
-CONFIG_IGC=y
+CONFIG_IGC=y                                 # 确保此驱动支持 XDP，通常需要
 CONFIG_IGC_HWMON=y
 CONFIG_IGC_DIM=y
 CONFIG_IGC_VLAN_STRIPPING=y
-CONFIG_IGC_LRO=y
+CONFIG_IGC_LRO=y                             # 大型接收卸载，可能与 XDP 协作或互斥，需测试
 CONFIG_IGC_TSN=y
 CONFIG_IGC_LATENCY_TOLERANCE=y
 CONFIG_IGC_TAPRIO=y
-CONFIG_IGC_QUEUES=4
-CONFIG_IGC_RX_POLLING=y
+CONFIG_IGC_QUEUES=4                          # 多队列支持对 XDP 性能有益
+CONFIG_IGC_RX_POLLING=y                      # 轮询模式通常有利于高性能场景
 CONFIG_IGC_RX_NAPI=y
 CONFIG_IGC_TX_NAPI=y
 CONFIG_IGC_GSO=y
 CONFIG_IGC_GRO=y
 CONFIG_IGC_RX_COPYBREAK=1024
 CONFIG_IGC_RX_NAPI_WEIGHT=256
-CONFIG_IGC_RSS=4
+CONFIG_IGC_RSS=4                             # RSS (接收端缩放) 对多队列和 XDP 很重要
 CONFIG_IGC_TSO=y
+# 注意：网卡驱动对 XDP 的支持程度是关键。IGC 驱动较新，通常支持 XDP。建议查阅最新内核文档或驱动源码确认。
 
 # ======================
 # 网卡队列优化
@@ -308,7 +359,7 @@ CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
-CONFIG_PACKAGE_irqbalance=y
+CONFIG_PACKAGE_irqbalance=y                  # 对于多队列网卡和 CPU 绑定，irqbalance 或手动中断分配可能重要
 CONFIG_PACKAGE_luci-app-irqbalance=y
 
 # ======================
@@ -317,7 +368,7 @@ CONFIG_PACKAGE_luci-app-irqbalance=y
 CONFIG_INTEL_EPB=y
 CONFIG_INTEL_PSTATE=y
 CONFIG_INTEL_PSTATE_HWP=y
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y    # 性能调控器对网络处理延迟更有利
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
@@ -347,7 +398,7 @@ CONFIG_RANDOMIZE_KSTACK_OFFSET=y
 CONFIG_STATIC_USERMODEHELPER=y
 CONFIG_ZERO_CALL_USED_REGS=y
 CONFIG_SECURITY_SELINUX=y
-CONFIG_RETPOLINE=n
+CONFIG_RETPOLINE=n                           # 使用 Intel CPU, 且 CFI 可能已提供缓解，故关闭
 CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
 CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
 CONFIG_HAVE_RUST=n
@@ -357,10 +408,10 @@ CONFIG_HAVE_RUST=n
 # ======================
 CONFIG_NO_HZ=y
 CONFIG_NO_HZ_COMMON=y
-CONFIG_NO_HZ_FULL=y
-CONFIG_NO_HZ_FULL_ALL=y
+CONFIG_NO_HZ_FULL=y                          # [已存在] 对 CPU 隔离和低延迟网络有益
+CONFIG_NO_HZ_FULL_ALL=y                      # [已存在]
 CONFIG_HZ_PERIODIC=n
-CONFIG_HZ_1000=y
+CONFIG_HZ_1000=y                             # [已存在] 高 HZ 利于低延迟
 
 # ======================
 # 缓存优化
@@ -371,19 +422,23 @@ CONFIG_TRANSPARENT_HUGEPAGE_ALWAYS=n
 CONFIG_TRANSPARENT_HUGEPAGE_MADVISE=y
 
 # ======================
-# 必备工具
+# 必备工具 (建议在 OpenWrt 包选择中确保安装)
 # ======================
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_iperf3=y
-CONFIG_PACKAGE_ethtool=y
+CONFIG_PACKAGE_ethtool=y                     # 用于检查和配置网卡（如查看 XDP 功能）
 CONFIG_PACKAGE_openssl-util=y
+# 建议额外添加的包（需在 OpenWrt menuconfig 的 Package selection 中勾选）：
+CONFIG_PACKAGE_bpftool=y                   # [重要] 用于管理和调试 eBPF 程序和映射
+CONFIG_PACKAGE_ip-full=y                   # [重要] `ip link` 命令支持设置 XDP 程序
+CONFIG_PACKAGE_clang-bpf-targets=y         # 如需在路由器上编译 eBPF 程序（非必须）
 
 # ======================
 # LuCI 应用
 # ======================
 CONFIG_PACKAGE_luci-app-arpbind=y
 CONFIG_PACKAGE_luci-app-diskman=y
-CONFIG_PACKAGE_luci-app-oaf=y
+CONFIG_PACKAGE_luci-app-oaf=y                # OAF (Open App Filter) 可能基于 eBPF
 CONFIG_PACKAGE_luci-app-filemanager=y
 
 # ======================
