更新 x86_64_mini.config

--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -55,6 +55,9 @@ CONFIG_ZERO_CALL_USED_REGS=y
 CONFIG_SECURITY_SELINUX=y
 CONFIG_HAVE_ARCH_JUMP_LABEL_RELATIVE=y
 CONFIG_HAVE_ARCH_WITHIN_STACK_FRAMES=y
+CONFIG_CRYPTO_DEV_PADLOCK=y
+CONFIG_CRYPTO_DEV_PADLOCK_AES=y
+CONFIG_CRYPTO_DEV_PADLOCK_SHA=y
 
 # ======================
 # 硬件特定优化 (Intel J4125)
@@ -110,6 +113,9 @@ CONFIG_KFENCE=y
 CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
 CONFIG_ARCH_WANT_OPTIMIZE_DAX_VMEMMAP=y
 CONFIG_ARCH_WANT_OPTIMIZE_HUGETLB_VMEMMAP=y
+CONFIG_SLAB_FREELIST_RANDOM=y
+CONFIG_SLAB_FREELIST_HARDENED=y
+CONFIG_RANDOMIZE_BASE=y
 
 # ======================
 # 网络协议栈优化
@@ -207,6 +213,7 @@ CONFIG_GENERIC_IRQ_IPI=y
 CONFIG_IRQ_TIME_ACCOUNTING=y
 CONFIG_HARDIRQS_SW_RESEND=y
 CONFIG_IRQ_DOMAIN_HIERARCHY=y
+CONFIG_GENERIC_IRQ_EFFECTIVE_AFF_MASK=y
 
 # ======================
 # 文件系统与模块
