--- a/x86_64_mini.config
+++ b/x86_64_mini.config
@@ -124,7 +124,7 @@ CONFIG_TCP_AO=y
 CONFIG_TCP_MD5SIG=y
 CONFIG_TCP_NO_TSQ=y
 CONFIG_NET_FLOW_LIMIT=y
-CONFIG_TCP_CONG_BBR=y
+CONFIG_TCP_CONG_BBR3=y
 CONFIG_TCP_CONG_ADVANCED=y
 CONFIG_TCP_ZERO_COPY_RECEIVE=y
 CONFIG_CONNECT_IP_ROUTE_MULTIPATH=y
