--- a/.github/workflows/build-llvm-openwrt.yml
+++ b/.github/workflows/build-llvm-openwrt.yml
@@ -5,8 +5,8 @@ on:
   workflow_dispatch:
 
 env:
-  REPO_URL: https://github.com/shuangqiao999/lede
-  REPO_BRANCH: master
+  REPO_URL: https://github.com/shuangqiao999/openwrt
+  REPO_BRANCH: 24.1
   FEEDS_CONF: feeds.conf.default
   CONFIG_FILE: x86_64_mini.config
   DIY_P1_SH: diy-part1.sh
